--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -3,7 +3,7 @@ import ColorSwitcherTitle from './colorSwitcher';
 import Icon from 'astro-icon';
 ---
 
-<section id="home" class="relative px-main xs>:px-4 pt-[4rem] flex justify-between">
+<section id="intro" class="relative px-main xs>:px-4 pt-[4rem] flex justify-between">
     <!-- tailwind can not do this -->
     <style>
         .gradient-70 {
