--- a/src/components/skills.astro
+++ b/src/components/skills.astro
@@ -14,12 +14,15 @@ const skills = [
     ['webpack', 'mdi:webpack'],
     ['Git', 'mdi:git'],
     ['Github', 'mdi:github'],
-    // ['Mysql', 'grommet-icons:mysql'],
-    // not colorable
-    // ['astrojs', 'simple-icons:astro'],
-    //not needed
+
+    //not sure
+    // ['Rest APIs', 'mdi:github'],
     // ['neovim', 'simple-icons:neovim'],
     // ['debian', 'grommet-icons:debian'],
+
+    // not good at
+    // ['Mysql', 'grommet-icons:mysql'],
+    // ['astrojs', 'simple-icons:astro'],
 ];
 ---
 
