Enhancement: mainly adding aome life to the page using icons. resolves #9 and resolves #10

--- a/src/components/about.astro
+++ b/src/components/about.astro
@@ -1,6 +1,12 @@
 ---
-const classes = {tableBorder: 'border-2 border-primary border-collapse', colPadding: 'px-3 py-2'}
+import Icon from 'astro-icon';
+
+const classes = {
+    tableBorder: 'border-2 border-primary border-collapse',
+    colPadding: 'px-3 py-2',
+};
 ---
+
 <section id="about" class="text-slate-50 pt-[6rem] px-main xs>:px-4">
     <h2
         class={`text-center capitalize text-2xl relative
@@ -11,36 +17,56 @@ const classes = {tableBorder: 'border-2 border-primary border-collapse', colPadd
         My <span class="text-primary">Story</span>
     </h2>
     <div class="flex xs>:flex-col gap-6 flex-wrap justify-center">
-        <div aria-label="story text" class="mt-[3rem] grow min-w-[300px] xs>:min-w-[200px] max-w-xl basis-0 flex flex-col justify-center">
+        <div
+            aria-label="story text"
+            class="mt-[3rem] grow min-w-[300px] xs>:min-w-[200px] max-w-xl basis-0 flex flex-col justify-center"
+        >
             <p class="mb-3">
-                As I always was fascinated by technology, Web engineers picked my mind
-                with the new fancy and carefully crafted solutions to certain problem.
+                As I always was fascinated by technology
+                <Icon name="flat-color-icons:electronics" class="w-6 inline text-primary" />,
+                Web engineers blew my mind
+                <Icon name="noto:brain" class="w-6 inline text-primary" />,
+                with the new captivating and carefully crafted solutions to certain problem.
             </p>
             <p class="">
                 And here I am going their path looking for a chance to do the same with
-                other curious and ambitious people like me.
+                other curious and ambitious
+                <Icon name="noto:astronaut-medium-skin-tone" class="w-6 inline text-primary" />,
+                people like me.
             </p>
         </div>
-        <table class={`${classes.tableBorder} mt-[3rem] grow-0 min-w-max xs>:min-w-min basis-0`}>
-            <tr  class={`${classes.tableBorder}`}>
+        <table
+            class={`${classes.tableBorder} mt-[3rem] grow-0 min-w-max xs>:min-w-min basis-0`}
+        >
+            <tr class={`${classes.tableBorder}`}>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}>2011</td>
-                <td class={`${classes.tableBorder} ${classes.colPadding}`}>Missing with electronics.</td>
+                <td class={`${classes.tableBorder} ${classes.colPadding}`}
+                    >Missing with electronics.</td
+                >
             </tr>
-            <tr  class={`${classes.tableBorder}`}>
+            <tr class={`${classes.tableBorder}`}>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}>2015</td>
-                <td class={`${classes.tableBorder} ${classes.colPadding}`}>I was hooked with security.</td>
+                <td class={`${classes.tableBorder} ${classes.colPadding}`}
+                    >I was hooked with security.</td
+                >
             </tr>
-            <tr  class={`${classes.tableBorder}`}>
+            <tr class={`${classes.tableBorder}`}>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}>2017</td>
-                <td class={`${classes.tableBorder} ${classes.colPadding}`}>Introduced myself to web.</td>
+                <td class={`${classes.tableBorder} ${classes.colPadding}`}
+                    >Introduced myself to web.</td
+                >
             </tr>
-            <tr  class={`${classes.tableBorder}`}>
+            <tr class={`${classes.tableBorder}`}>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}>2021</td>
-                <td class={`${classes.tableBorder} ${classes.colPadding}`}>Making windows malware.</td>
+                <td class={`${classes.tableBorder} ${classes.colPadding}`}
+                    >Making windows malware.</td
+                >
             </tr>
-            <tr  class={`${classes.tableBorder}`}>
+            <tr class={`${classes.tableBorder}`}>
                 <td class={`${classes.tableBorder} ${classes.colPadding}`}>2022</td>
-                <td class={`${classes.tableBorder} ${classes.colPadding}`}>I toke web seriously</td>
+                <td class={`${classes.tableBorder} ${classes.colPadding}`}
+                    >I toke web seriously</td
+                >
             </tr>
         </table>
     </div>
