--- a/src/layouts/sharedLayout.astro
+++ b/src/layouts/sharedLayout.astro
@@ -1,7 +1,7 @@
 ---
 import Icon from 'astro-icon';
 
-const classes = {link: 'border-b-transparent pb-2 border-b-2 hover:border-b-primary capitalize'};
+const classes = {link: 'border-b-transparent pb-2 border-b-2 hover:border-b-primary capitalize text-lg'};
 ---
 
 <script client:load>
