--- a/src/components/portfolio.astro
+++ b/src/components/portfolio.astro
@@ -90,7 +90,7 @@ const projectItems: projectItemsT = [
                                     return (
                                         <a
                                             href={item.card.previewLink}
-                                            class="w-max text-primary border-2 border-primary px-3 py-1 rounded-xl"
+                                            class="w-max text-primary border-[1px] border-primary px-3 py-1 rounded-xl"
                                         >
                                             <Icon
                                                 name={button[1]}
