--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,5 +1,4 @@
 ---
-import ColorSwitcherTitle from './colorSwitcher';
 import Icon from 'astro-icon';
 ---
 
@@ -22,32 +21,75 @@ import Icon from 'astro-icon';
             I'm astronaut
         </p>
         <!-- hero title -->
-        <ColorSwitcherTitle
-            client:load
-            title="A Web Engineer"
-            tailwindStyle={{title: 'text-[2.5rem] mb-[1rem]'}}
-        />
+        <script>
+            const titleLetters = document.getElementById('heroTitle').children;
+
+            // loop
+            {
+                let i = 0;
+                setInterval(() => {
+                    if (i == titleLetters.length) {
+                        i = 0;
+                        return;
+                    }
+
+                    titleLetters[i].classList.toggle('text-primary');
+
+                    i++;
+                }, 100);
+            }
+        </script>
+        <h1 id="heroTitle" class="text-[2.5rem] mb-[1rem]">
+            {
+                'A Web Engineer'.split('').map((letter) => {
+                    return <span>{letter}</span>;
+                })
+            }
+        </h1>
+
         <p class={`max-w-[25rem] leading-relaxed first-letter:uppercase`}>
-            I write sweat code <Icon name='noto:honey-pot' class='w-6 inline' /> for the web,
+            I write sweat code <Icon name="noto:honey-pot" class="w-6 inline" /> for the web,
         </p>
         <p class={`max-w-[25rem] leading-relaxed first-letter:uppercase`}>
             With the help of sweat technologies.
         </p>
         <ul aria-label="socialMedia" class="flex gap-3 mt-5 text-primary">
-            <li><a href="https:twitter.com" target="_blank"><Icon name='ph:twitter-logo-bold' class="h-10 w-8"/></a></li>
-            <li><a href="https:linkedin.com" target="_blank"><Icon name='ri:linkedin-line' class="h-10 w-8"/></a></li>
-            <li><a href="https:github.com" target="_blank"><Icon name='ri:github-line' class="h-10 w-8"/></a></li>
+            <li>
+                <a href="https:twitter.com" target="_blank"
+                    ><Icon name="ph:twitter-logo-bold" class="h-10 w-8" />
+                </a>
+            </li>
+            <li>
+                <a href="https:linkedin.com" target="_blank"
+                    ><Icon name="ri:linkedin-line" class="h-10 w-8" />
+                </a>
+            </li>
+            <li>
+                <a href="https:github.com" target="_blank"
+                    ><Icon name="ri:github-line" class="h-10 w-8" />
+                </a>
+            </li>
         </ul>
         <div class="flex flex-wrap gap-7 mt-8">
-            <button class={`text-primary capitalize py-[5px] border-[1px] border-primary px-3 py-2 rounded-xl`}>
+            <button
+                class={`text-primary capitalize py-[5px] border-[1px] border-primary px-3 py-2 rounded-xl`}
+            >
                 <a href="#contact">
-                   <Icon name='mdi:hand-wave-outline' class='inline text-primary mr-2 w-7' /> 
-                    Get in Touch</a>
+                    <Icon
+                        name="mdi:hand-wave-outline"
+                        class="inline text-primary mr-2 w-7"
+                    />
+                    Get in Touch</a
+                >
             </button>
-            <button class={`text-primary capitalize py-[5px] border-[1px] border-primary px-3 py-2 rounded-xl`}>
-                <a href="/media/projects/snipshare.jpeg" download="astronaut_resume.pdf"
-                    >
-                   <Icon name='ic:round-sim-card-download' class='inline text-primary mr-1 w-7' /> 
+            <button
+                class={`text-primary capitalize py-[5px] border-[1px] border-primary px-3 py-2 rounded-xl`}
+            >
+                <a href="/media/projects/snipshare.jpeg" download="astronaut_resume.pdf">
+                    <Icon
+                        name="ic:round-sim-card-download"
+                        class="inline text-primary mr-1 w-7"
+                    />
                     Download resume</a
                 >
             </button>
