Enhancement: added some loading animation. resolves #13

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -16,7 +16,7 @@ import Icon from 'astro-icon';
             );
         }
     </style>
-    <div class="z-10 gradient-70">
+    <div class="z-10 gradient-70 animate-loadFromLeft">
         <p class="text-primary capitalize uppercase text-xl tracking-wider">
             I'm astronaut
         </p>
@@ -107,7 +107,7 @@ import Icon from 'astro-icon';
             }
         }
     </style>
-    <div class="w-[190px] absolute astro astro>:hidden">
+    <div class="w-[190px] absolute astro astro>:hidden animate-loadFromRight">
         <Icon class="text-primary/50 w-2xl" name="fa-solid:user-astronaut" />
         <!-- <Icon class='absolute z-20 w-2xl' name='mdi:fire-circle'/> -->
         <!-- <Icon class='absolute top-[-120px] left-[-30px] w-[20rem] text-primary' name='mdi:fire'/> -->
