--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ import Contact from '../components/contact.astro';
         <meta name="generator" content={Astro.generator} />
         <title>Astronaut</title>
     </head>
-    <body class="text-white bg-gray-900">
+    <body class="text-white bg-gray-900 overflow-x-hidden">
         <SharedLayout>
             <Hero />
             <Portfolio />
