Enhancement: eliminated duplication and changed some icons. resolves #14

--- a/src/components/contact.astro
+++ b/src/components/contact.astro
@@ -1,5 +1,6 @@
 ---
 import Icon from 'astro-icon';
+import SocialMedia from './shared/socialMedia.astro';
 const classes = {
     input: `border-l-2 border-l-primary px-2 py-1 bg-gray-400/10 block w-full mb-4`,
 };
@@ -48,27 +49,14 @@ const classes = {
             type="submit"
             class="cursor-pointer text-lg border-l-2 border-l-primary px-2 py-1 mt-3 subtleHoverSlider group"
         >
-            <Icon name="ion:paper-airplane" class="mr-2 w-6 inline text-primary group-hover:rotate-[35deg] duration-300" />
+            <Icon
+                name="ion:paper-airplane"
+                class="mr-2 w-6 inline text-primary group-hover:rotate-[35deg] duration-300"
+            />
             Sumbit
         </button>
     </form>
 
     <h3 class="capitalize mx-auto w-max mt-10 text-xl">other methods</h3>
-    <ul aria-label="socialMedia" class="flex gap-3 mt-5 text-primary mx-auto w-max">
-        <li>
-            <a href="https:twitter.com" target="_blank"
-                ><Icon name="ph:twitter-logo-bold" class="h-10 w-8 hover:scale-[1.2] duration-300" />
-            </a>
-        </li>
-        <li>
-            <a href="https:linkedin.com" target="_blank"
-                ><Icon name="ri:linkedin-line" class="h-10 w-8 hover:scale-[1.2] duration-300" />
-            </a>
-        </li>
-        <li>
-            <a href="https:github.com" target="_blank"
-                ><Icon name="ri:github-line" class="h-10 w-8 hover:scale-[1.2] duration-300" />
-            </a>
-        </li>
-    </ul>
+    <SocialMedia style="mx-auto w-max" />
 </section>
